Segundo commit en la rama feature luego de realizar cambios de estilo y primeras verificaciones de flujo

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                 <h2>Importar Datos</h2>
                 <input type="file" id="fileInput" accept=".xlsx, .xls">
                 <button id="importButton">Importar</button>
+                <div id="importMessage" class="import-message"></div>
             </div>
             <!-- Tabla de colaboradores -->
             <table id="collaboratorsTable">
