--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                 <h2>Importar Datos</h2>
                 <input type="file" id="fileInput" accept=".xlsx, .xls">
                 <button id="importButton">Importar</button>
+                <button id="exportButton">Exportar a Excel</button>
                 <div id="importMessage" class="import-message"></div>
             </div>
             <!-- Tabla de colaboradores -->
