Primer commit en la rama fearure/contadores-ubicacion inicio de implementación de Base de Datos

--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
                 <button id="importButton">Importar</button>
                 <button id="exportButton">Exportar a Excel</button>
                 <div id="importMessage" class="import-message"></div>
+            </div>            
+            <div class="conciliation-section">
+                <label for="conciliationMonth">Mes de Conciliación:</label>
+                <input type="month" id="conciliationMonth">
             </div>
             <!-- Tabla de colaboradores -->
             <table id="collaboratorsTable">
