--- a/index.html
+++ b/index.html
@@ -7,96 +7,95 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div id="loader" style="display:none;">
-        <div class="spinner"></div>
-        <span>Procesando datos...</span>
+  <div class="main-container">
+    <!-- Tarjeta fija arriba -->
+    <div class="header-card">
+      <div class="header-flex">
+        <div class="header-main">
+          <h1>Sistema de Estimulación Colaboradores</h1>
+          <div class="counters">
+            <div class="counter">
+              <span class="counter-label">Total Colaboradores</span>
+              <span id="totalCollaborators" class="counter-value">0</span>
+            </div>
+            <div class="counter">
+              <span class="counter-label">Con Estímulo</span>
+              <span id="withStimulation" class="counter-value">0</span>
+            </div>
+            <div class="counter">
+              <span class="counter-label">En Vacaciones</span>
+              <span id="onVacation" class="counter-value">0</span>
+            </div>
+            <div class="counter">
+              <span class="counter-label">Fin de Misión</span>
+              <span id="endOfMission" class="counter-value">0</span>
+            </div>
+          </div>
+          <div class="import-section">
+            <h2>Gestión de Datos</h2>                 
+            <div class="add-collaborator-section">
+              <h3>Agregar Colaborador</h3>
+              <form id="addCollaboratorForm">
+                  <input type="text" id="estadoInput" placeholder="Ubicación/Estado" required>
+                  <input type="text" id="nombreInput" placeholder="Nombre y Apellidos" required>                        
+                  <input type="date" id="fechaSalidaInput" placeholder="Fecha de Salida">
+                  <input type="date" id="fechaEntradaInput" placeholder="Fecha de Entrada">
+                  <button type="submit">Agregar</button>
+              </form>
+            </div>               
+            <button id="exportButton">Exportar a Excel</button>
+            <button id="clearDatabaseButton">Limpiar Base de Datos</button>                
+          </div>            
+          <div class="conciliation-section">
+            <label for="conciliationMonth">Mes de Conciliación:</label>
+            <input type="month" id="conciliationMonth">
+          </div>
+        </div>
+        <div class="state-counters-card">
+          <h3>Contadores por Estado</h3>
+          <div id="stateCountersContent" class="location-buttons">
+            <!-- Aquí se generan los botones dinámicamente -->
+          </div>
+        </div>
+      </div>
     </div>
-    <div class="container">
-        <!-- Tarjeta Central -->        
-        <div class="central-card">
-            <h1>Sistema de Estimulación Colaboradores</h1>
-            <h3>Contadores Generales</h3>
-            <div class="counters">
-                <div class="counter">
-                    <span class="counter-label">Total Colaboradores</span>
-                    <span id="totalCollaborators" class="counter-value">0</span>
-                </div>
-                <div class="counter">
-                    <span class="counter-label">Con Estímulo</span>
-                    <span id="withStimulation" class="counter-value">0</span>
-                </div>
-                <div class="counter">
-                    <span class="counter-label">En Vacaciones</span>
-                    <span id="onVacation" class="counter-value">0</span>
-                </div>
-                <div class="counter">
-                    <span class="counter-label">Fin de Misión</span>
-                    <span id="endOfMission" class="counter-value">0</span>
-                </div>
-            </div>
-            <div class="import-section">
-                <h2>Importar Datos</h2>
-                <input type="file" id="fileInput" accept=".xlsx, .xls">
-                <button id="importButton" disabled>Importar</button>
-                <button id="exportButton">Exportar a Excel</button>
-                <button id="clearDatabaseButton">Limpiar Base de Datos</button>
-                <span id="importMessage" class="import-message"></span>
-            </div>            
-            <div class="conciliation-section">
-                <label for="conciliationMonth">Mes de Conciliación:</label>
-                <input type="month" id="conciliationMonth">
-            </div>
-            <!-- Tabla de colaboradores -->
-            <table id="collaboratorsTable">
-                <thead>
-                    <tr>
-                        <th>Estado</th>
-                        <th>Nombre del Colaborador</th>
-                        <th>Fecha de Salida</th>
-                        <th>Estimulación</th>
-                        <th>Fecha de Entrada</th>
-                        <th>Vacaciones</th>
-                        <th>Fin de Misión</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <!-- Datos se cargarán dinámicamente -->
-                </tbody>
-            </table>
-        </div>
 
-        <!-- Contenedor de tarjetas izquierdas -->
-        <div class="left-cards-container">
-
-
-            <!-- Tarjeta: Contadores por Ubicación -->
-            <div class="left-card">
-                <h3>Contadores por Ubicación</h3>
-                <div class="location-buttons">
-                    <!-- Los botones de estados se generarán dinámicamente -->
-                </div>
-                <div class="location-details" style="display: none;">
-                    <div class="counters">
-                        <div class="counter">
-                            <span class="counter-label">Total</span>
-                            <span class="counter-value">0</span>
-                        </div>
-                        <div class="counter">
-                            <span class="counter-label">Con Estímulo</span>
-                            <span class="counter-value">0</span>
-                        </div>
-                        <div class="counter">
-                            <span class="counter-label">Vacaciones</span>
-                            <span class="counter-value">0</span>
-                        </div>
-                        <div class="counter">
-                            <span class="counter-label">Fin de Misión</span>
-                            <span class="counter-value">0</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+    <!-- Tarjeta de la tabla (scrollable) -->
+    <div class="table-card">
+      <!-- Tabla de colaboradores -->
+      <table id="collaboratorsTable">
+          <thead>
+              <tr>
+                  <th>Estado</th>
+                  <th>Nombre del Colaborador</th>
+                  <th>Fecha de Salida</th>
+                  <th>Estimulación</th>
+                  <th>Fecha de Entrada</th>
+                  <th>Vacaciones</th>
+                  <th>Fin de Misión</th>
+                  <th>Acciones</th>
+              </tr>
+          </thead>
+          <tbody>
+              <!-- Datos se cargarán dinámicamente -->
+          </tbody>
+      </table>
+    </div>
+  </div>
+    <!-- Modal de edición -->
+    <div id="editModal" class="modal" style="display:none;">
+      <div class="modal-content">
+        <span id="closeEditModal" class="close">&times;</span>
+        <h3>Editar Colaborador</h3>
+        <form id="editCollaboratorForm">
+          <input type="hidden" id="editId">
+          <input type="text" id="editNombre" placeholder="Nombre y Apellidos" required>
+          <input type="text" id="editEstado" placeholder="Ubicación/Estado" required>
+          <input type="date" id="editFechaSalida" placeholder="Fecha de Salida">
+          <input type="date" id="editFechaEntrada" placeholder="Fecha de Entrada">
+          <button type="submit">Guardar Cambios</button>
+        </form>
+      </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
     <script src="app.js"></script>
