Quinto commit en la rama feature/estilos-funcionalidades implementación Estilos Visuales, validaciones, funciones

--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
             <div class="counter">
               <span class="counter-label">Fin de Misión</span>
               <span id="endOfMission" class="counter-value">0</span>
-            </div>
+            </div>            
           </div>
+          <div id="messageBox" class="message-box"></div>
           <div class="import-section">
             <h2>Gestión de Datos</h2>                 
             <div class="add-collaborator-section">              
