Décimo commit en la rama feature/estilos-funcionalidades con validación de (Día de Presencia)ok

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <th title="Derecho a estimulación si permanece al menos 15 días en el país">Estimulación</th>
                 <th title="Vacaciones si tiene fecha de salida y no de entrada">Vacaciones</th>
                 <th title="Fin de Misión si el checkbox está marcado en edición">Fin de Misión</th>
-                <th title="Días que el colaborador estuvo en el país durante el mes de conciliación">Días de Permanencia</th>
+                <th title="Días que el colaborador estuvo en el país durante el mes de conciliación">Días de Presencia</th>
                 <th>Acciones</th>
               </tr>
           </thead>
