Segund commit en main después de merge corregido bordes de celdas

--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
               <span id="withStimulation" class="counter-value">0</span>
             </div>
             <div class="counter">
+              <i class="far fa-star counter-icon"></i>
+              <span id="withoutStimulation" class="counter-value">0</span>
+            </div>
+            <div class="counter">
               <i class="fas fa-umbrella-beach counter-icon"></i>
               <span id="onVacation" class="counter-value">0</span>
             </div>
