Tercer commit en main después de merge corregido barra de búsqueda ok

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                   <div class="conciliation-section">
                     <label for="conciliationMonth">Mes de Conciliación:</label>
                     <input type="month" id="conciliationMonth">
-                    <button id="clearDatabaseButton">Limpiar Base de Datos</button> 
+                    <input type="text" id="searchInput" placeholder="Buscar colaborador...">
                   </div>                  
               </form>
             </div>                           
