Sexto commit en main después de merge corregido estilo de botón Exportar con filtro ok

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                   <input type="text" id="estadoInput" placeholder="Ubicación/Estado" required>
                   <input type="text" id="nombreInput" placeholder="Nombre y Apellidos" required>                  
                   <button type="submit">Agregar</button>
-                  <button id="exportButton">Exportar a Excel</button>
+                  <button id="exportButton" type="button">Exportar a Excel</button>
                   <div class="conciliation-section">
                     <label for="conciliationMonth">Mes de Conciliación:</label>
                     <input type="month" id="conciliationMonth">
