--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
       <table id="collaboratorsTable">
           <thead>
               <tr>
+                <th style="width:32px;"></th>
                 <th>Estado</th>
                 <th>Nombre del Colaborador</th>
                 <th>Fecha de Salida</th>
