--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Sistema de Evaluación de Colaboradores</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'%3E%3Ctext y='52' font-size='52'%3E%E2%AD%90%3C/text%3E%3C/svg%3E" />
 </head>
 <body>
   <div class="main-container">
