Décimoctavo commit en la rama main con depuraciones de error, con los últimos toques visuales ok

--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
             <div class="counter-horizontal">
               <i class="fas fa-star counter-icon"></i>
               <span class="counter-value" id="withStimulation">0</span>
-              <span class="counter-label">C/Estimulación</span>
+              <span class="counter-label">C/Derecho</span>
             </div>
             <div class="counter-horizontal">
               <i class="far fa-star counter-icon"></i>
               <span class="counter-value" id="withoutStimulation">0</span>
-              <span class="counter-label">S/Estimulación</span>
+              <span class="counter-label">S/Derecho</span>
             </div>
             <div class="counter-horizontal">
               <i class="fas fa-umbrella-beach counter-icon"></i>
@@ -39,7 +39,7 @@
             <div class="counter-horizontal">
               <i class="fas fa-flag-checkered counter-icon"></i>
               <span class="counter-value" id="endOfMission">0</span>
-              <span class="counter-label">Fin de Misión</span>
+              <span class="counter-label">F/M</span>
             </div>
           </div>
           <div id="messageBox" class="message-box"></div>
@@ -55,10 +55,10 @@
             <div class="collapsible-line">
               <hr>
               <div id="toggleFormTab" class="collapsible-tab" title="Mostrar/Ocultar">
-                <i id="toggleIcon" class="fas fa-chevron-up"></i>
+                <i id="toggleIcon" class="fas fa-chevron-down"></i>
               </div>
             </div>
-            <div id="collaboratorFormContainer">
+            <div id="collaboratorFormContainer" class="collapsed">
               <div class="add-collaborator-section">              
                 <form id="addCollaboratorForm">
                     <div class="form-row">
