commit número veintidos después de resolver handel o manejador y agregar botones de filtro a contadores por estado

--- a/index.html
+++ b/index.html
@@ -78,6 +78,20 @@
         <div class="state-counters-card">
           <div class="state-counters-header">
             <h3>Contadores por Estado</h3>
+            <div class="filter-buttons">
+              <button id="filterStimulationBtn" class="filter-btn" title="Filtrar por Estimulación">
+                <i class="fas fa-star"></i>
+              </button>
+              <button id="filterNoStimulationBtn" class="filter-btn" title="Filtrar por Sin Estimulación">
+                <i class="far fa-star"></i>
+              </button>
+              <button id="filterVacationBtn" class="filter-btn" title="Filtrar por Vacaciones">
+                <i class="fas fa-umbrella-beach"></i>
+              </button>
+              <button id="filterEndMissionBtn" class="filter-btn" title="Filtrar por Fin de Misión">
+                <i class="fas fa-flag-checkered"></i>
+              </button>
+            </div>
             <button id="stateFilterAllBtn" class="location-button location-button-todos">Todos (0)</button>
           </div>
           <div id="stateCountersGrid" class="location-buttons-grid">
