commit número (25) después de resolver lo relacionado a los filtros todo ok

--- a/index.html
+++ b/index.html
@@ -78,7 +78,10 @@
         <div class="state-counters-card">
           <div class="state-counters-header">
             <h3>Contadores por Estado</h3>
-            <div class="filter-buttons">
+            <div class="filter-buttons">              
+              <button id="filterEditedBtn" class="filter-btn" title="Filtrar por Editados">
+                <i class="fas fa-edit"></i>                
+              </button>
               <button id="filterStimulationBtn" class="filter-btn" title="Filtrar por Estimulación">
                 <i class="fas fa-star"></i>
               </button>
