commit número (29) Loguin terminado ok y apariencia ok

--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
     <div class="header-card">
       <div class="header-flex">
         <div class="header-main">
-          <h1 class="header-title">Sistema de Estimulación para los Colaboradores</h1>            
+          <div class="title-user-container">
+            <div class="user-info-placeholder"></div>
+            <h1 class="header-title">Sistema de Estimulación para los Colaboradores</h1>
+          </div>            
           <div class="counters">
             <div class="counter-horizontal">
               <i class="fas fa-users counter-icon"></i>
